 + Skip ammo menu animation when playing with turn time of 10s or less
 + Restructure credits
 + Credits screen in main menu is now translatable
 + Don't show crate spawn message for initial crates in missions
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 + Display player name of own teams in online games
 * Use player-chosen team identity in campaigns and singleplayer missions
 * Fix last 2 characters in demo chat being missing
 * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Fix poison damage not working in first round
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix force-locked schemes getting unlocked when changing map types
 * Suppress “<team> is gone.” message at end of game

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
 + New call: AddMissionTeam(color): Add mission team, i.e. the team selected by player in campaign/mission page
 + New call: AddMissionHog(health): Add a hedgehog for the mission team
 + New return value: AddTeam/AddMissionTeam return <real team name>, <team index>
 + Utils library: New calls: getReadableChallengeRecord, updateChallengeRecord
 + New callback: onGameResult(winningClan): Called when the game ends normally. winningClan = index of winning clan or -1 on draw
 + SimpleMission: Add isMissionTeam attribute for teams